--- a/where-for-dinner-ui/public/index.html
+++ b/where-for-dinner-ui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Where for Dinner Dining Availability Search.1673625601  Continuously score availability at hard to reserve establishments"
+      content="Where for Dinner Dining Availability Search.  Continuously score availability at hard to reserve establishments"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
